# htmx-poem

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
migration/src/: lib.rs  m20231007_045627_create_chat_tables.rs
src/: chats.rs  conversation.rs  main.rs  settings.rs  templates.rs
src/entity/: chat.rs  conversation.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
src/routes/: conversation.rs  index.rs  mod.rs  settings.rs
templates/: base.html  chat.html  chat_page.html  chat_window.html  conversation_page.html  conversation_window.html  hello.html  index.html  message.html  needed_review.html  needed_review_card.html  needed_reviews.html  settings_page.html  user_settings.html
