[package]
name = "htmx-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
openai-rust = "0.5.1"
poem = { version = "1.3.58", features = ["tokio-rustls"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
